--- a/pom.xml
+++ b/pom.xml
@@ -14,4 +14,12 @@
 
   <version>1.0-SNAPSHOT</version>
 
+  <dependencies>
+    <dependency>
+      <groupId>com.stone.it</groupId>
+      <artifactId>micro.rcms.ischeduler</artifactId>
+      <version>1.0.0-SNAPSHOT</version>
+    </dependency>
+  </dependencies>
+
 </project>
