--- a/pom.xml
+++ b/pom.xml
@@ -20,6 +20,11 @@
       <artifactId>micro.rcms.ischeduler</artifactId>
       <version>1.0.0-SNAPSHOT</version>
     </dependency>
+    <dependency>
+      <groupId>com.stone.it</groupId>
+      <artifactId>micro.rcms.framercms</artifactId>
+      <version>1.0.0-SNAPSHOT</version>
+    </dependency>
   </dependencies>
 
 </project>
