--- a/pom.xml
+++ b/pom.xml
@@ -17,12 +17,7 @@
   <dependencies>
     <dependency>
       <groupId>com.stone.it</groupId>
-      <artifactId>micro.rcms.ischeduler</artifactId>
-      <version>1.0.0-SNAPSHOT</version>
-    </dependency>
-    <dependency>
-      <groupId>com.stone.it</groupId>
-      <artifactId>micro.rcms.framercms</artifactId>
+      <artifactId>rcms-quartz</artifactId>
       <version>1.0.0-SNAPSHOT</version>
     </dependency>
   </dependencies>
